# gakkoudayori-ai

./: .flutter-plugins-dependencies  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_SCRIPT.md  GEMINI.md  Makefile  QUICK_DEMO_GUIDE.md  README.md  SECURITY_SETUP.md  SETUP_GUIDE.md  api_connection_demo.py  backend_operation_commands.md  claude-code.sh  conversational_ui_design.md  create_tmux_layout.sh  firebase.json  firestore.indexes.json  firestore.rules  frontend_backend_connection_guide.md  mkdocs.yml  pubspec.yaml  requirements.txt  requirements_check.md  setup_tmux_environment.sh  start_both_servers.sh  storage-cors.json  storage.rules  test_complete_solution.py
backend/: ADK_API_BEST_PRACTICE.md  Dockerfile  README.md  apt.yml  auth.py  cloud_config.yaml  env.example  main.py  pyproject.toml  requirements.txt  start_adk_server.py  test_adk_compatibility.py  test_ai_heading_generation.py  test_ai_structure.py  test_api_endpoints.py  test_custom_instruction.py  test_gemini_integration.py  test_malformed_function_call_fix.py  test_multiuser_fix.py  test_speech_integration.py  test_user_dictionary.py  test_uv_migration.py
backend/agents/conversation_agent/: agent.py  prompt.py
backend/agents/core/: error_handler.py  performance_monitor.py
backend/agents/generator_agent/: agent.py
backend/agents/layout_agent/: agent.py  agent_old.py  deliver_html_tool.py  prompt.py
backend/agents/main_conversation_agent/: agent.py  prompt.py
backend/agents/orchestrator_agent/: agent.py
backend/agents/planner_agent/: agent.py
backend/agents/shared/: __init__.py  file_utils.py
backend/agents/tools/: classroom_sender.py  html_validator.py  pdf_converter.py  stt_transcriber.py  user_dict_register.py
backend/api/: newsletter_endpoints.py  pdf_endpoints.py  websocket.py
backend/app/: .env.example  Dockerfile  auth.py  classroom.py  main.py  main_dev.py  main_local.py  pdf.py  phrase.py  requirements.txt  start_server.py  start_server_test.py  stt.py  upload.py  user_dictionary.py  修正計画_ADK_Session_Management.md
backend/app/adk/: __init__.py
backend/app/core/: artifact_manager.py  config.py  dependencies.py  rate_limiter.py
backend/app/examples/: adk_usage_example.py
backend/app/models/: adk_models.py
backend/app/prompts/: MODERN_LAYOUT.md  MODERN_TENSAKU.md
backend/app/services/: adk_session_service.py  audio_to_json_service.py  gcp_auth_service.py  gemini_api_service.py  html_constraint_service.py  image_processing_service.py  json_to_graphical_record_service.py  newsletter_generator.py  newsletter_service.py  pdf_generator.py  speech_recognition_service.py  taste_selection_service.py  user_dictionary_service.py
backend/app/tests/: test_adk_agent.py  test_adk_endpoints.py  test_api_endpoints.py  test_firebase.py  test_main.py
backend/config/: README.md  gcloud_config.py  test_gcloud_config.py
backend/functions/: .env.example  Dockerfile  adk_compliant_orchestrator.py  adk_compliant_tools.py  adk_enhanced_service.py  adk_integration_service.py  adk_multi_agent_service.py  adk_official_multi_agent_service.py  adk_official_service.py  adk_refactored_service.py  ai_service_interface.py  audio_format_spec.md  audio_to_json_service.py  check_available_models.py  classroom_integration_agent.py  cleanup_category_fields.py  conversational_api_service.py  demo_test_runner.py  firebase_service.py  gcp_auth_service.py  gemini_api_service.py  gemini_model_investigation_report.md  html_constraint_service.py  image_metadata_service.py  integration_test.py  json_to_graphical_record_service.py  main.py  media_agent.py  mock_demo_runner.py  model_analysis_report.md  newsletter_generator.py  pdf_generator.py  pdf_output_agent.py  requirements.txt  run_adk_tests.py  speech_recognition_service.py  start_server.py  test_adk_complete_flow.py  test_adk_compliant_tools.py  test_adk_curl.json  (+20 more)
backend/functions/prompts/: CLASSIC_LAYOUT.md  CLASSIC_TENSAKU.md  MODERN_LAYOUT.md
backend/functions/tests/: final_test.py  test_api_endpoints.py  test_backend.py  test_firebase.py  test_firebase_service.py  (+6 more)
backend/models/: user_settings.py
backend/services/: __init__.py  ai_service.py  auth_service.py  classroom_service.py  cloud_storage_service.py  custom_instruction_service.py  firestore_service.py  google_auth.py  pdf_service.py  speech_service.py  storage.py  user_dictionary_service.py  user_settings_service.py
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_auth.py  test_cloud_storage_service.py  test_main.py  test_pdf_service.py
web/: audio.js  (+1 more)
(+570 files in other folders)
